# coding-agent

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
coco_codes/: __init__.py  __main__.py  claude_cache_client.py  cli_runner.py  config.py  error_logging.py  http_utils.py  keymap.py  main.py  model_factory.py  model_switching.py  model_utils.py  models.json  models_dev_parser.py  provider_identity.py  pydantic_patches.py  session_storage.py  status_display.py  summarization_agent.py  terminal_utils.py  uvx_detection.py  version_checker.py
coco_codes/agents/: __init__.py  _builder.py  _compaction.py  _diagnostics.py  _key_listeners.py  _non_streaming_render.py  _run_signals.py  _runtime.py  _steer_processor.py  agent_coco_codes.py  agent_creator_agent.py  agent_helios.py  agent_manager.py  agent_planning.py  agent_qa_automation.py  base_agent.py  event_stream_handler.py  json_agent.py  subagent_stream_handler.py
coco_codes/command_line/: __init__.py  add_model_menu.py  agent_menu.py  autosave_menu.py  colors_menu.py  command_handler.py  command_registry.py  config_commands.py  core_commands.py  diff_menu.py  judges_menu.py  load_context_completion.py  mcp_binding_menu.py  mcp_completion.py  model_picker_completion.py  model_settings_menu.py  onboarding_slides.py  onboarding_wizard.py  pin_command_completion.py  prompt_toolkit_completion.py  session_commands.py  shell_passthrough.py  skills_completion.py  uc_menu.py  utils.py  wiggum_state.py
coco_codes/hook_engine/: README.md  __init__.py  aliases.py  executor.py  matcher.py
coco_codes/mcp_/: __init__.py  agent_bindings.py  blocking_startup.py  captured_stdio_server.py  config_wizard.py  dashboard.py  managed_server.py  manager.py  mcp_logs.py  registry.py  server_registry_catalog.py
coco_codes/mcp_prompts/: __init__.py  hook_creator.py
coco_codes/messaging/: __init__.py  commands.py  message_queue.py  messages.py  queue_console.py  renderers.py  rich_renderer.py  subagent_console.py
coco_codes/plugins/: __init__.py  oauth_html_templates.py
coco_codes/tools/: __init__.py  agent_tools.py  command_runner.py  common.py  display.py  file_modifications.py  file_operations.py  image_tools.py  skills_tools.py  subagent_context.py  tools_content.py  universal_constructor.py
coding_agent/: __init__.py  __main__.py  claude_cache_client.py  cli_runner.py  config.py  error_logging.py  http_utils.py  keymap.py  main.py  model_factory.py  model_switching.py  model_utils.py  models.json  models_dev_parser.py  provider_identity.py  pydantic_patches.py  session_storage.py  status_display.py  summarization_agent.py  terminal_utils.py  uvx_detection.py  version_checker.py
coding_agent/agents/: __init__.py  _builder.py  _compaction.py  _diagnostics.py  _key_listeners.py  _non_streaming_render.py  _run_signals.py  _runtime.py  _steer_processor.py  agent_coding_agent.py  agent_creator_agent.py  agent_helios.py  agent_manager.py  agent_planning.py  base_agent.py  event_stream_handler.py  json_agent.py  subagent_stream_handler.py
coding_agent/command_line/: __init__.py  add_model_menu.py  agent_menu.py  autosave_menu.py  clipboard.py  colors_menu.py  command_handler.py  command_registry.py  config_commands.py  core_commands.py  diff_menu.py  judges_menu.py  load_context_completion.py  mcp_binding_menu.py  mcp_completion.py  model_picker_completion.py  model_settings_menu.py  onboarding_slides.py  onboarding_wizard.py  pin_command_completion.py  prompt_toolkit_completion.py  session_commands.py  shell_passthrough.py  skills_completion.py  uc_menu.py  utils.py  wiggum_state.py
coding_agent/hook_engine/: README.md  __init__.py  aliases.py  executor.py  matcher.py  validator.py
coding_agent/mcp_/: __init__.py  agent_bindings.py  blocking_startup.py  config_wizard.py  (+7 more)
docs/: AGENT_SKILLS.md  CEREBRAS.md  HOOKS.md
tests/: conftest.py  test_agent_creator_full_coverage.py  test_agent_pinned_models.py  test_agent_refresh.py  test_agent_tools.py  test_agent_tools_coverage.py  test_agent_tools_full_coverage.py  test_ask_user_question_full_coverage.py  test_auto_save_session.py  test_callback_extensions.py  test_callbacks_extended.py  test_chatgpt_codex_client.py  test_claude_cache_client.py  test_claude_cache_client_full_coverage.py  test_claude_oauth_reauth_retry.py  test_cli_runner.py  test_cli_runner_coverage.py  test_cli_runner_full_coverage.py  test_command_cache.py  test_command_handler.py  test_command_line_attachments.py  test_command_line_utils.py  test_command_registry.py  test_compaction_strategy.py  test_completions_and_small_modules.py  test_config.py  test_config_and_storage_edge_cases.py  test_config_extended_part1.py  test_config_extended_part2.py  test_config_full_coverage.py  test_console_spinner_coverage.py  test_coverage_agents_gaps.py  test_edit_file_expansion.py  test_error_logging.py  test_file_modification_auxiliary.py  test_file_permissions.py  test_gemini_code_assist.py  test_gemini_model_full_coverage.py  test_hook_manager.py  test_http_utils.py  (+58 more)
(+512 files in other folders)
